--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
 click==6.7
+coverage==4.3.1
 docopt==0.6.2
+flake8==3.2.1
 Flask==0.12
 gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.9.3
 MarkupSafe==0.23
+mccabe==0.5.3
+py==1.4.32
+pycodestyle==2.2.0
+pyflakes==1.3.0
+pytest==3.0.5
+pytest-cov==2.4.0
 requests==2.12.4
 Werkzeug==0.11.15
 yarg==0.1.9
